force-app/main/default/objects/ampi__xx_Activity_Dependency__c/ampi__xx_Activity_Dependency__c.object-meta.xml
<CustomObject>
    <label>Activity Dependency</label>
    <nameField>
        <label>Activity Dependency Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Activity Dependencies</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>