force-app/main/default/objects/ampi__xx_Activity_Dependency__c/fields/ampi__xx_Preceding_Activity__c.field-meta.xml
<CustomField>
    <fullName>ampi__xx_Preceding_Activity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>First activity in a dependency that controls the start or end date for related succeeding activities</description>
    <label>Preceding Activity</label>
    <referenceTo>ampi__Activity__c</referenceTo>
    <relationshipLabel>Activity Dependencies (Preceding Activity)</relationshipLabel>
    <relationshipName>Preceding_Activities</relationshipName>
    <type>Lookup</type>
</CustomField>