force-app/main/default/objects/ampi__xx_Activity_Dependency__c/fields/ampi__xx_Succeeding_Activity__c.field-meta.xml
<CustomField>
    <fullName>ampi__xx_Succeeding_Activity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The succeeding activity’s start or end date is controlled by the predecessor</description>
    <label>Succeeding Activity</label>
    <referenceTo>ampi__Activity__c</referenceTo>
    <relationshipLabel>Activity Dependencies (Succeeding Activity)</relationshipLabel>
    <relationshipName>Succeeding_Dependencies</relationshipName>
    <type>Lookup</type>
</CustomField>