force-app/main/default/objects/ampi__xx_Activity_Dependency__c/fields/ampi__xx_Type__c.field-meta.xml
<CustomField>
    <fullName>ampi__xx_Type__c</fullName>
    <description>Dependency relationship between the preceding activity and succeeding activity. The preceding activity must either start or finish before the succeeding activity can start or finish.</description>
    <inlineHelpText>Define the dependency relationship between the predecessor and successor activities</inlineHelpText>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>0</fullName>
                <label>Finish to Start</label>
            </value>
            <value>
                <fullName>1</fullName>
                <label>Start to Start</label>
            </value>
            <value>
                <fullName>2</fullName>
                <label>Finish to Finish</label>
            </value>
            <value>
                <fullName>3</fullName>
                <label>Start to Finish</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>